# qatrackplus-manager

./: .gitignore  README.md  bootstrap.sh  current_sha  pyproject.toml
qatrackplus-manager-windows/: README.md  Vagrantfile  bootstrap.ps1  pyproject.toml  run-manager.ps1
qatrackplus-manager-windows/.vagrant/machines/default/virtualbox/: action_cloud_init  action_provision  action_set_name  box_meta  index_uuid  synced_folders  vagrant_cwd
qatrackplus-manager-windows/qatrackplus_manager_windows/: __main__.py
qatrackplus-manager-windows/qatrackplus_manager_windows.egg-info/: SOURCES.txt  requires.txt  top_level.txt
qatrackplus-manager-windows/qatrackplus_manager_windows/cli/: database.py  iis.py  install.py  menu.py  services.py
qatrackplus-manager-windows/qatrackplus_manager_windows/config/: logging.py
qatrackplus-manager-windows/qatrackplus_manager_windows/operations/: db.py  iis.py  install.py  scan.py  services.py  wizard.py
qatrackplus-manager-windows/qatrackplus_manager_windows/transport/: powershell.py
qatrackplus-manager-windows/scripts/: manage_vm.ps1
qatrackplus_manager/: __main__.py  exceptions.py
qatrackplus_manager/checks/: __init__.py  scan.py  test_install.py  version.py
qatrackplus_manager/cli/: menu.py  prompts.py
qatrackplus_manager/config/: detect.py  models.py  settings_writer.py  state.py
qatrackplus_manager/operations/: backup.py  dependencies.py  install.py  manager.py  restore.py  upgrade.py
qatrackplus_manager/services/: database.py  gunicorn.py  web_server.py
tests/: __init__.py  test_detect.py
(+6 files in other folders)
