[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qatrackplus-manager"
version = "0.1.4"
description = "Install, upgrade, backup, restore and verify QA Track Plus installations"
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "paramiko>=3.0",
    "psutil>=5.9",
    "requests>=2.31",
    "packaging>=23.0",
    "typing-extensions>=4.0; python_version < '3.10'",
]

[project.scripts]
qatrackplus-manager = "qatrackplus_manager.__main__:main"

[project.urls]
Repository = "https://github.com/YOUR_ORG/qatrackplus-manager"
